<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.srainbow.leisureten.activity.MainActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_tb"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary500">

        </android.support.v7.widget.Toolbar>
        <TextView
            android:id="@+id/main_happy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_tb"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:textSize="15sp"
            android:text="@string/HappyArea"/>
        <android.support.v7.widget.CardView
            android:id="@+id/main_happy_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_happy_tv"
            android:layout_margin="1dp"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">
                <com.srainbow.leisureten.widget.RectangleImageView
                    android:id="@+id/main_happy_cv_item1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:imgText="@string/funnyPicture"
                    android:src="@drawable/ic_funny"/>
                <com.srainbow.leisureten.widget.RectangleImageView
                    android:id="@+id/main_happy_cv_item2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="50dp"
                    app:type="round"
                    app:borderRadius="15dp"
                    app:imgText="@string/joke"
                    android:src="@drawable/ic_joke"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/main_classification_other_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_happy_cv"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/ClassificationOther"
            tools:layout_editor_absoluteX="15dp" />
        <TextView
            android:id="@+id/main_classification_more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/main_classification_other_tv"
            android:layout_marginEnd="15dp"
            android:text="@string/ClassificationMore"/>
        <android.support.v7.widget.CardView
            android:id="@+id/main_classification_other_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_classification_other_tv"
            android:layout_margin="1dp"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/main_other_cv_rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item1"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_animal"
                        app:imgText="@string/animal"/>
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_food"
                        app:imgText="@string/food"/>
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_wedding"
                        app:imgText="@string/wedding"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/main_other_cv_rl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp">
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item4"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/ic_news"
                        app:imgText="@string/news"/>
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item5"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_adventure"
                        app:imgText="@string/adventure"/>
                    <com.srainbow.leisureten.widget.RectangleImageView
                        android:id="@+id/main_other_cv_item6"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_clothes"
                        app:imgText="@string/clothes"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
